Fix gap in CartWidget order-block

--- a/app/checkout/components/CartWidget/CartWidget.module.scss
+++ b/app/checkout/components/CartWidget/CartWidget.module.scss
@@ -20,6 +20,7 @@
 .order-block {
     @include flex-y-center;
     justify-content: space-between;
+    gap: 0.5em;
 
     flex: 1;
 }
@@ -41,6 +42,7 @@
 }
 
 .price {
+    @include text-wo-margin(1rem);
     font-weight: 700;
 }
 
